# Preditores_da_Picada

./: .gitignore  .pre-commit-config.yaml  README.md  akk.yaml  initialize_directories.sh  pyproject.toml
.github/workflows/: pre-commit.yml
notebooks/states/: rio_de_janeiro_arima.ipynb
src/: Sarima.py
