[project]
name = "preditores-da-picada"
version = "0.1.0"
description = ""
authors = [
    {name = "richard viana",email = "al.richard.viana@impatech.org.br"}
]
readme = "README.md"
requires-python = "3.12.10"
dependencies = [
    "mosqlient (>=1.9.3,<2.0.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "epiweeks (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
